@@ -34,6 +34,7 @@ import org.restlet.data.Range;
 import org.restlet.data.Request;
 import org.restlet.data.Response;
 import org.restlet.data.Status;
+import org.restlet.resource.Representation;
 import org.restlet.service.RangeService;
 
 /**
@@ -57,33 +58,54 @@ public class RangeFilter extends Filter {
     protected void afterHandle(Request request, Response response) {
         if (getRangeService().isEnabled()) {
             response.getServerInfo().setAcceptRanges(true);
-            
+
             if (response.isEntityAvailable()) {
                 if (request.getRanges().size() == 1) {
                     // At this time, list of ranges are not supported.
                     Range requestedRange = request.getRanges().get(0);
-                    if (!requestedRange.equals(response.getEntity().getRange())) {
-                        getLogger()
-                                .info(
-                                        "The range of the response entity is not equal to the requested one.");
-                        response.setEntity(new RangeRepresentation(response
-                                .getEntity(), requestedRange));
-                    }
-                    if (Method.GET.equals(request.getMethod())
-                            && response.getStatus().isSuccess()
-                            && !Status.SUCCESS_PARTIAL_CONTENT.equals(response
-                                    .getStatus())) {
-                        response.setStatus(Status.SUCCESS_PARTIAL_CONTENT);
-                        getLogger()
-                                .info(
-                                        "The status of a response to a partial GET must be \"206 Partial content\".");
+                    if (response.getEntity().getSize() == Representation.UNKNOWN_SIZE) {
+                        if ((requestedRange.getIndex() == Range.INDEX_LAST || requestedRange
+                                .getSize() == Range.SIZE_MAX)
+                                && !(requestedRange.getIndex() == Range.INDEX_LAST && requestedRange
+                                        .getSize() == Range.SIZE_MAX)) {
+                            // The end index cannot be properly computed
+                            response.setStatus(Status.SERVER_ERROR_INTERNAL);
+                            getLogger()
+                                    .warning(
+                                            "Unable to serve this range since at least the end index of the range cannot be computed.");
+                            response.setEntity(null);
+                        }
+                    } else {
+                        boolean rangeEntity = response.getEntity().getRange() != null;
+                        if (!requestedRange.equals(response.getEntity()
+                                .getRange())) {
+                            if (rangeEntity) {
+                                getLogger()
+                                        .info(
+                                                "The range of the response entity is not equal to the requested one.");
+                            }
+                            response.setEntity(new RangeRepresentation(response
+                                    .getEntity(), requestedRange));
+                        }
+                        if ((Method.GET.equals(request.getMethod()) || Method.HEAD
+                                .equals(request.getMethod()))
+                                && response.getStatus().isSuccess()
+                                && !Status.SUCCESS_PARTIAL_CONTENT
+                                        .equals(response.getStatus())) {
+                            response.setStatus(Status.SUCCESS_PARTIAL_CONTENT);
+                            if (rangeEntity) {
+                                getLogger()
+                                        .info(
+                                                "The status of a response to a partial GET must be \"206 Partial content\".");
+                            }
+                        }
                     }
                 } else if (request.getRanges().size() > 1) {
-                    // Return a server error as this isn't supported yet
-                    response
-                            .setStatus(Status.CLIENT_ERROR_REQUESTED_RANGE_NOT_SATISFIABLE);
+                    // Return a server error as this feature isn't supported yet
+                    response.setStatus(Status.SERVER_ERROR_NOT_IMPLEMENTED);
+                    getLogger().warning(
+                            "Multiple ranges are not supported at this time.");
                     response.setEntity(null);
-
                 }
             }
         }
