@@ -134,10 +134,10 @@ public class HttpServerConverter extends HttpConverter {
                 responseHeaders.add(HttpConstants.HEADER_ETAG, entity.getTag()
                         .format());
             }
-
-            if (entity.getSize() != Representation.UNKNOWN_SIZE) {
+            long size = entity.getAvailableSize();
+            if (size != Representation.UNKNOWN_SIZE) {
                 responseHeaders.add(HttpConstants.HEADER_CONTENT_LENGTH, Long
-                        .toString(entity.getSize()));
+                        .toString(size));
             }
 
             if (entity.getIdentifier() != null) {
